--- a/website/css/family-dashboard-styles.css
+++ b/website/css/family-dashboard-styles.css
@@ -27,17 +27,25 @@ body{
     font-size: 15px;
 }
 
-.time-to-walk{
-    color: yellow;
-}
-
 .world-clock{
     font-family: "Courier New"
 }
 
+.time-to-walk{
+    color: green;
+}
+
 
 .time-to-run{
+    color: yellow;
+}
+
+.time-to-drive{
     color: red;
+}
+
+.missed-transport{
+    color: grey;
 }
 
 .sun_rise
@@ -78,14 +86,6 @@ body{
     height: 100px;
 }
 
-.sun_rise {
-    background-position: -595px -480px;
-}
-
-.sun_set {
-    background-position: -695px -480px;
-}
-
 .clear{
     background-position: -25px 0px;
 }
@@ -95,7 +95,7 @@ body{
 }
 
 .mostly_clear{
-    background-position: -780px -480px;
+    background-position: -790px -480px;
 }
 
 .partly_cloudy{
@@ -103,45 +103,53 @@ body{
 }
 
 .mostly_cloudy{
-    background-position: -500px -100px;
+    background-position: -505px -100px;
 }
 
 .light_fog, .fog{
-    background-position: -310px 10px;
+    background-position: -311px 10px;
 }
 
 .wind, .light_wind{
-    background-position: -690px -185px;
+    background-position: -695px -185px;
 }
 
 .strong_wind{
-    background-position: -780px -185px;
+    background-position: -790px -185px;
 }
 
 .drizzle{
-    background-position: -300px -90px;
+    background-position: -310px -90px;
 }
 
 .rain{
-    background-position: -110px -190px;
+    background-position: -120px -190px;
 }
 
 .light_rain{
-    background-position: -780px -385px;
+    background-position: -790px -385px;
 }
 
 .heavy_rain{
-    background-position: -15px -190px;
+    background-position: -25px -190px;
 }
 
 .snow, .light_snow, .heavy_snow, .flurries{
-    background-position: -685px  -360px;
+    background-position: -695px  -380px;
 }
 
 .freezing_drizzle, .freezing_rain, .light_freezing_rain, .heavy_freezing_rain, .ice_pellets, .heavy_ice_pellets, .light_ice_pellets {
-    background-position: -300px -90px;
+    background-position: -310px -90px;
 }
 
 .thunderstorm{
-    background-position: -880px 30px;
+    background-position: -888px 10px;
+}
+
+.sun_rise {
+    background-position: -595px -480px;
+}
+
+.sun_set {
+    background-position: -695px -480px;
 }
