Small refactor - now using a model object in the javascript and switching on features based on it - allowing switching on/off sections independently.  Also site now doesn't break when runtime-config.json is missing, some other small improvements.

--- a/website/css/family-dashboard-styles.css
+++ b/website/css/family-dashboard-styles.css
@@ -28,13 +28,16 @@ body{
 }
 
 .world-clock{
-    font-family: "Courier New"
+    font-family: "Courier New", monospace
 }
 
 .time-to-walk{
     color: green;
 }
 
+#user-messages-div {
+    height: 100px;
+}
 
 .time-to-run{
     color: yellow;
