Grouping tasks by Label, and making them easier to see.

--- a/website/css/family-dashboard-styles.css
+++ b/website/css/family-dashboard-styles.css
@@ -61,3 +61,10 @@ th, td {
 .sunset-icon {
     background: #92a0ac;
 }
+
+tr td{
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  margin-bottom: 0 !important;
+  margin-top: 0 !important;
+}
