Making minimumDriveTransitTime an optional field.

--- a/website/css/family-dashboard-styles.css
+++ b/website/css/family-dashboard-styles.css
@@ -69,3 +69,10 @@ tr td{
   margin-bottom: 0 !important;
   margin-top: 0 !important;
 }
+
+.hidden-link{
+    color: white;
+}
+.hidden-link:hover{
+    color: red;
+}
